# pico-mod-player

./: CMakeLists.txt  README.md
async/: CMakeLists.txt  async_msg.c  async_msg.h  core1_main.c  main.c
data/: the_softliner.h
i2s/: CMakeLists.txt  main.c
lib/: audio.c  audio.h  mod_data.h  mod_play.c  mod_play.h  sound_i2s.c  sound_i2s.h
simple/: CMakeLists.txt  main.c
